--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,5 @@
-name: tflite_flutter
-description: A new Flutter application.
-
-# The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+name: tflite_demo
+description: A new Flutter project.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -18,18 +14,18 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
+  tflite: ^1.0.4
+  image_picker: ^0.6.1+8
+  image: ^2.1.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  tflite: ^1.1.1
-  image_picker: ^0.7.3
+  cupertino_icons: ^0.1.2
 
 dev_dependencies:
   flutter_test:
@@ -40,23 +36,21 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   assets:
-  - assets/
-  #   - images/a_dot_ham.jpeg
-
+    - assets/tflite/ssd_mobilenet.tflite
+    - assets/tflite/ssd_mobilenet.txt
+    - assets/tflite/yolov2_tiny.tflite
+    - assets/tflite/yolov2_tiny.txt
+    - assets/img.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
